--- a/index.html
+++ b/index.html
@@ -261,10 +261,10 @@
                     <div class="about__info">
                         <h2 class="uk-h2">Who We Are</h2>
                         <p>
-                            We are a professional, creative team of live captioners with multiple years of experience working with a broad range of events of every type and scale. Our passion is providing accessibility through live captioning in a manner that fits both our clients' branding and aesthetics, while managing the behind-the-scenes details so our you don’t have to worry about them.
+                            We are a professional, creative team of live captioners with multiple years of experience working with a broad range of events of every type and scale. Our passion is providing accessibility through live captioning in a manner that fits both our clients' branding and aesthetics, while managing the behind-the-scenes details so you don’t have to worry about them.
                         </p>
                         <p>
-                            Our goal is to provide our clients the highest caliber of service to expand ADA accommodations through delivering accurate captions all while using the latest technology to do so. Our objective is to make your event a leader in the industry by providing and delivering captions that not only are customized to your event, but also make it more accessible and beneficial to everyone.
+                            Our goal is to provide our clients the highest caliber of service to expand ADA accommodations through delivering accurate captions, all while using the latest technology to do so. Our objective is to make your event a leader in the industry by providing and delivering captions that not only are customized to your event, but also make it more accessible and beneficial to everyone.
                         </p>
                     </div>
                 </div>
@@ -283,8 +283,8 @@
             <h3 class="team__title uk-h3"><span class="team__title_inner">Meet Our Team</span></h3>
             <div class="team__members uk-flex uk-flex-center" data-uk-grid data-uk-scrollspy="cls:uk-animation-fade; target: .team__member__wrap; delay: 300">
                 <div class="team__member__wrap uk-width-1-2 uk-width-1-4@m">
-                    <a class="team__member" data-uk-toggle="target: #mathew_hyatt">
-                        <div class="cover__photo uk-background-cover uk-transition-toggle" data-src="img/team/avatars/Mathew_Hyatt.jpg" data-uk-img>
+                    <a class="team__member" data-uk-toggle="target: #isaiah_roberts">
+                        <div class="cover__photo uk-background-cover uk-transition-toggle" data-src="img/team/isaiah_profile.jpg" data-uk-img>
                             <span class="cover__link boxshadow icon icon--dots uk-transition-scale-up"></span>
                         </div>
                         <span class="team__name">Isaiah Roberts</span>
@@ -292,8 +292,8 @@
                     </a>
                 </div>
                 <div class="team__member__wrap uk-width-1-2 uk-width-1-4@m">
-                    <a class="team__member" data-uk-toggle="target: #jessika_turcotte">
-                        <div class="cover__photo uk-background-cover uk-transition-toggle" data-src="img/team/avatars/Jessika_Turcotte.jpg" data-uk-img>
+                    <a class="team__member" data-uk-toggle="target: #stanley_sakai">
+                        <div class="cover__photo uk-background-cover uk-transition-toggle" data-src="img/team/stanley_profile.jpg" data-uk-img>
                             <span class="cover__link boxshadow icon icon--dots uk-transition-scale-up"></span>
                         </div>
                         <span class="team__name">Stanley Sakai</span>
@@ -617,14 +617,14 @@
     <!-- .......... Contacts Section .......... -->
     <section id="contact" class="contacts uk-section" data-uk-scrollspy="cls:uk-animation-fade; offset-top: 80px; delay: 300">
         <div class="container--min uk-container">
-            <h2 class="uk-h2">Contacts</h2>
+            <h2 class="uk-h2">Contact</h2>
             <div data-uk-grid>
                 <div class="uk-width-1-3@m">
                     <h3 class="uk-h3">We'd love to hear from you!</h3>
                     <div data-uk-grid>
                         <!-- .......... Contacts Details .......... -->
                         <p class="contacts__info uk-width-1-1 uk-width-1-2@s uk-width-1-1@m">
-                            <strong class="contacts__subtitle">Call us:</strong>
+                            <strong class="contacts__subtitle">Call:</strong>
                             <br>
                             <a href="tel:+18159938250">(815) 993-8250</a>
                         </p>
@@ -716,15 +716,14 @@
     </footer>
     <!-- .......... End Footer .......... -->
 
-
     <!-- .......... Modal Windows .......... -->
-    <div id="mathew_hyatt" data-uk-modal>
+    <div id="isaiah_roberts" data-uk-modal>
         <div class="modal modal__profile uk-modal-dialog uk-margin-auto-vertical">
             <div class="modal__cover uk-cover-container">
                 <img src="img/team/covers/Mathew_Hyatt.jpg" data-src="img/team/covers/Mathew_Hyatt.jpg" alt="" data-uk-cover>
             </div>
             <div class="modal__content">
-                <div class="modal__avatar boxshadow uk-background-cover" data-src="img/team/avatars/Mathew_Hyatt.jpg" data-uk-img></div>
+                <div class="modal__avatar boxshadow uk-background-cover" data-src="img/team/isaiah_profile.jpg" data-uk-img></div>
                 <h3 class="modal__profile__title uk-modal-title uk-text-center">Isaiah Roberts</h3>
                 <div class="modal__profile__subtitle uk-text-center">Accessibility Strategist, Live Stenographer</div>
                 <p class="uk-text-left">
@@ -744,13 +743,13 @@
             <button class="modal__close uk-modal-close-outside" type="button" data-uk-close></button>
         </div>
     </div>
-    <div id="jessika_turcotte" data-uk-modal>
+    <div id="stanley_sakai" data-uk-modal>
         <div class="modal modal__profile uk-modal-dialog uk-margin-auto-vertical">
             <div class="modal__cover uk-cover-container">
-                <img src="img/team/covers/Jessika_Turcotte.jpg" data-src="img/team/covers/Jessika_Turcotte.jpg" alt="" data-uk-cover>
+                <img src="img/team/stanley_profile.jpg" data-src="img/team/stanley_profile.jpg" alt="Stanley Sakai profile photo" data-uk-cover>
             </div>
             <div class="modal__content">
-                <div class="modal__avatar boxshadow uk-background-cover" data-src="img/team/avatars/Jessika_Turcotte.jpg" data-uk-img></div>
+                <div class="modal__avatar boxshadow uk-background-cover" data-src="img/team/stanley_profile.jpg" data-uk-img></div>
                 <h3 class="modal__profile__title uk-modal-title uk-text-center">Stanley Sakai</h3>
                 <div class="modal__profile__subtitle uk-text-center">Technical Lead, Live Stenographer</div>
                 <p class="uk-text-left">
